# SigmaDrift

./: .clang-format  CMakeLists.txt  README.md
src/: coob.c  coob.h  main.c  mesh.c  mesh.h  object.h  video.c  video.h  vmath.h
